# ipex-llm

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  MappingGuidance.md  MigrationGuidance.md  README.ja-JP.md  README.md  README.zh-CN.md  dist.xml  env.sh  h origin master  lossComparison  make-dist.sh  nano_python.py  next-oob  package-lock.json  package.json  pom.xml  pyproject.toml  run_deepspeed.sh  save.patch  scalastyle_config.xml  sparkdl-run.sh  test.out  test_deepspeed.py  tmp1
ppml/trusted-big-data-ml/python/docker-gramine/: .clang-format  .dir-locals.el  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  CustomerImageDockerfile  DCO  Dockerfile  LICENSE.addendum.txt  LICENSE.txt  Makefile  README.md  README.rst  bash.manifest.template  bigdl-ppml-submit.sh  build-docker-image.sh  deploy-local-spark-sgx.sh  entrypoint.sh  init.sh  kms-utils.sh  meson.build  meson_options.txt  patch  pytest.ini  spark-driver-template.yaml  spark-executor-template.yaml  test2  tracker.py
python/llm/: CMakeLists.txt  README.md  setup-linux.py  setup.py  version.txt
python/llm/dev/: benchamrk_first_token.py  pep8-1.7.0.py  print_glib_requirement.py  release.sh  release_default_linux.sh  release_default_windows.sh
python/llm/dev/benchmark/: README.md  benchmark_util.py  gpu_benchmark_util.py  native_benchmark.py  run-benchmark-tests.sh
python/llm/dev/test/: lint-python  pep8-1.7.0.py  run-example-ipynb-tests.sh  run-example-tests-436.sh  run-example-tests.sh  run-langchain-upstream-tests.sh
python/llm/example/: README.md  gptneox.py  simple.py  transformers_int4.py  transformers_quantize_4bit.py
python/llm/example/CPU/: README.md
python/llm/example/GPU/: README.md
python/llm/example/Text-Generation-WebUI/: README.md  requirements.txt  server.py
python/llm/example/bloom/: README.md  bloom.py
python/llm/example/cpp-python/: README.md  int4_inference.py
python/llm/example/gptneox/: README.md  gptneox.py
python/llm/example/gpu/: README.md
python/llm/example/langchain/: README.md  docqa.py  streamchat.py  voiceassistant.py
python/llm/example/llama/: README.md  llama.py
python/llm/example/llm-sd-notebook/: code.py  demo.ipynb
python/llm/example/pytorch-model/: README.md
python/llm/example/pytorch-models/: README.md
python/llm/example/transformers/: README.md  int4_pipeline.py  native_int4_pipeline.py  native_int4_pipeline_readme.md  transformers-example.py  transformers_int4_pipeline.py  transformers_int4_pipeline_readme.md
python/llm/portable-executable/: .gitignore  README.md  chat.py  setup.bat  setup.md
python/llm/portable-installer/: .gitignore  README.md  chat.py  setup.bat  setup.md
python/llm/portable-zip/: .gitignore  README-ui.md  README.md  chat-cpu.bat  chat-gpu.bat  chat-ui.bat  chat.bat  chat.ps1  chat.py  kv_cache.py  setup.bat  setup.md
python/llm/scripts/: README.md  activate-unset-ocl.sh  bigdl-llm-init  check.py  env-check.bat  env-check.py  env-check.sh  ipex-llm-init  ipex-llm-init-support.py  ipex-llm-init.bat  linux-env-check.py  win-env-check.py
python/llm/src/bigdl/: __init__.py
python/llm/src/ipex_llm/: __init__.py  convert_model.py  llm_patching.py  models.py  optimize.py
python/llm/test/: run-langchain-upstream-tests.sh  run-llm-basic-tests.sh  run-llm-check-function.sh  run-llm-convert-tests.sh  run-llm-example-tests-gpu.sh  run-llm-finetune-tests-gpu.sh  run-llm-inference-tests-4.36.sh  run-llm-inference-tests-436.sh  run-llm-inference-tests-gpu-4.36.sh  run-llm-inference-tests-gpu-434.sh  run-llm-inference-tests-gpu.sh  run-llm-inference-tests.sh  run-llm-install-tests.sh  run-llm-langchain-tests-gpu.sh  run-llm-langchain-tests.sh  run-llm-llamaindex-tests-gpu.sh  run-llm-llamaindex-tests.sh  run-llm-windows-tests.sh
python/llm/test/basics/: test_install.py
python/llm/test/benchmark/: 32-igpu-perf-test-434.yaml  32-igpu-perf-test.yaml  512-igpu-perf-test-434-bf16-nonlinear.yaml  512-igpu-perf-test-434.yaml  512-igpu-perf-test-bf16-nonlinear.yaml  512-igpu-perf-test.yaml  analyze_log_dir.py  arc-perf-test-436.yaml  arc-perf-test-436.yaml.bak  arc-perf-test-batch2-436.yaml.bak  arc-perf-test-batch2.yaml  arc-perf-test-batch4-436.yaml.bak  arc-perf-test-batch4.yaml  arc-perf-test.yaml  arc-perf-test2.yaml  arc-perf-transformers-434.yaml  arc-perf-transformers-436-batch2.yaml  arc-perf-transformers-436-batch4.yaml  arc-perf-transformers-436.yaml  arc-perf-transformers-437-batch2.yaml  arc-perf-transformers-437-batch4.yaml  arc-perf-transformers-437.yaml  arc-perf-transformers-438-batch2.yaml  arc-perf-transformers-438-batch4.yaml  arc-perf-transformers-438.yaml  arc-perf-transformers-440.yaml  arc-perf-transformers-443-batch2.yaml  arc-perf-transformers-443-batch4.yaml  arc-perf-transformers-443.yaml  arc-perf-transformers-445-batch2.yaml  arc-perf-transformers-445-batch4.yaml  arc-perf-transformers-445.yaml  check_html_lines.py  check_results.py  concat_csv.py  core-perf-test.yaml  cpu-perf-test.yaml  csv_to_html.py  igpu-perf-test-434.yaml  igpu-perf-test.yaml  (+15 more)
python/llm/test/convert/: test_convert_model.py
python/llm/test/inference/: test_call_models.py  test_optimize.py  test_optimize_mistral.py  test_optimize_model.py  test_optimize_model_api.py  test_transformers_api.py  test_transformers_api_436.py  test_transformesr_api_434.py
python/llm/test/inference_gpu/: test_layer_fast_rope.py  test_optimize_model.py  test_transformers_api.py  test_transformers_api_RMSNorm.py  test_transformers_api_attention.py  test_transformers_api_decoder.py  test_transformers_api_disable_xmx.py  test_transformers_api_final_logits.py  test_transformers_api_layernorm.py  test_transformers_api_mlp.py  test_transformers_api_others.py
python/llm/test/install/: test_install.py
python/llm/test/langchain/: test_langchain.py  test_transformers_api.py
python/llm/test/langchain_gpu/: test_transformers_api.py
python/llm/test/llamaindex/: test_llamaindex.py
python/llm/test/llamaindex_gpu/: test_llamaindex.py
python/llm/test/win/: ftp.txt.example  (+6 more)
python/llm/tpp/: README.md
(+18527 files in other folders)
