# TODO: after deprecating 18.04/bionic, change these to type: 'feature'
option('direct', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install gramine-direct (aka Linux aka nonsgx)')
option('sgx', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install gramine-sgx (aka Linux-SGX)')
option('skeleton', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build skeleton PAL')

option('glibc', type: 'combo', choices: ['disabled', 'enabled'],
    value: 'enabled', description: 'Build patched glibc')
option('musl', type: 'combo', choices: ['disabled', 'enabled'],
    value: 'enabled', description: 'Build patched musl')

option('tests', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build test binaries')

option('dcap', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build additional utilities linked against DCAP library')
option('ubsan', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Enable undefined behavior sanitizer')
option('asan', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Enable address sanitizer (Clang only)')
option('libgomp', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build patched libgomp (takes long time)')

option('sgx_driver', type: 'combo',
    choices: ['upstream', 'dcap1.6', 'dcap1.10', 'oot'],
    description: 'Flavour of the SGX driver')
option('sgx_driver_include_path', type: 'string',
    description: 'Path to SGX driver headers (default value depends on sgx_driver)')
option('sgx_driver_device', type: 'string',
    description: 'Path to "enclave" device in /dev (default value depends on sgx_driver)')

option('syslibdir', type: 'string',
    description: 'Path to the system library directory')

option('vtune', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Enable profiling with VTune for Gramine with SGX')
option('vtune_sdk_path', type: 'string',
    value: '/opt/intel/oneapi/vtune/latest/sdk',
    description: 'Path to the VTune SDK installation')
